Fix multi-channel AAC encoding.

Fixes ticket 55.